EDSC-1327 Fix overlap of granule filter panel. Add missing fixtures.

--- a/app/assets/stylesheets/modules/master_overlay.css.scss
+++ b/app/assets/stylesheets/modules/master_overlay.css.scss
@@ -125,7 +125,7 @@
   overflow: hidden;
   z-index: 180;
   position: absolute;
-  height: 100%;
+  height: 90%;
   transition-property: right, left;
   transition-duration: 0.3s;
 
